tests/machine/x/go/group_by.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by.go:15:14: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:16:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:21:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:26:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:31:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:36:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:41:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by.go:47:20: undefined: Stats
../../../tests/machine/x/go/group_by.go:61:16: undefined: Stats
../../../tests/machine/x/go/group_by.go:64:30: undefined: Stats
../../../tests/machine/x/go/group_by.go:64:30: too many errors

1: //go:build ignore
